<?xml version="1.0"?>
<package format="3">
  <name>kvaser_interface</name>
  <version>4.1.0</version>
  <description>Kvaser CAN interface for ROS device drivers.</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>MIT</license>
  <url type="bugtracker">https://github.com/astuff/kvaser_interface/issues</url>
  <url type="repository">https://github.com/astuff/kvaser_interface</url>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
</package>
